--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "codeceptjs": "^3.3.7",
-    "webdriverio": "^8.1.3" 
+    "webdriverio": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
-    "mocha": "^8.1.3",
-    "mocha-junit-reporter": "^2.2.0",
-    "mochawesome": "^7.1.3",
+    "allure-commandline": "^2.20.1",
     "ts-node": "^10.9.1"
   },
   "description": ""
